# Final_Learning_AI

./: .gitignore  Jenkinsfile  README.md
00_Mathmatics/: 05_Mathmatics.ipynb
09_Gen_AI/01_LlmCourse/spec_kit/01_spec_kit/practical/practical_project_2/backend/: .env.example  Makefile  README.md  pyproject.toml
09_Gen_AI/01_LlmCourse/spec_kit/01_spec_kit/practical/practical_project_2/backend/alembic/: env.py
09_Gen_AI/01_LlmCourse/spec_kit/01_spec_kit/practical/practical_project_2/backend/app/: main.py
09_Gen_AI/Practical/: .env.example  LICENSE  Makefile  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml
09_Gen_AI/Practical/docs/: architecture.md  development_workflow.md
09_Gen_AI/Practical/infra/docker/: agent.Dockerfile  chat.Dockerfile  eval.Dockerfile  gateway.Dockerfile  rag.Dockerfile
09_Gen_AI/Practical/infra/nginx/: default.conf
09_Gen_AI/Practical/phases/01_foundation/: README.md  design.md  tasks.md
09_Gen_AI/Practical/phases/02_rag/: README.md  design.md
09_Gen_AI/Practical/phases/02_rag/project/: README.md
09_Gen_AI/Practical/phases/03_agents/: design.md  notes.md  tasks.md
09_Gen_AI/Practical/phases/04_production/: tasks.md
09_Gen_AI/Practical/phases/05_evaluation/: README.md  notes.md  tasks.md
09_Gen_AI/Practical/phases/06_capstone/: tasks.md
09_Gen_AI/Practical/scripts/: bootstrap.sh  tree.txt
09_Gen_AI/Practical/services/agent_service/: README.md
09_Gen_AI/Practical/services/agent_service/app/: main.py
09_Gen_AI/Practical/services/chat_service/: README.md
09_Gen_AI/Practical/services/chat_service/app/: main.py
09_Gen_AI/Practical/services/eval_service/: README.md
09_Gen_AI/Practical/services/eval_service/app/: main.py
09_Gen_AI/Practical/services/gateway_api/: README.md
09_Gen_AI/Practical/services/gateway_api/app/: main.py
09_Gen_AI/Practical/services/ingestion_worker/: README.md
09_Gen_AI/Practical/services/ingestion_worker/app/: worker.py
09_Gen_AI/Practical/services/rag_service/: README.md
09_Gen_AI/Practical/services/rag_service/app/: main.py
09_Gen_AI/Practical/shared/core/: schemas.py  settings.py
09_Gen_AI/Practical/shared/llm/: base.py  providers.py
09_Gen_AI/Practical/shared/rag/: chunking.py  retriever.py
09_Gen_AI/Practical/tests/: test_health_endpoints.py
(+798 files in other folders)
