[project]
name = "llm-genai-engineer-monorepo"
version = "0.1.0"
description = "Production-oriented roadmap and implementation monorepo for LLM / Generative AI engineering."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "httpx>=0.27.0",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.2.0",
    "python-dotenv>=1.0.0",
    "openai>=2.0.0",
    "anthropic>=0.40.0",
    "sentence-transformers>=3.0.0",
    "faiss-cpu>=1.8.0.post1",
    "numpy>=2.1.0",
    "pandas>=2.2.0",
    "tenacity>=9.0.0",
    "structlog>=24.4.0",
    "prometheus-client>=0.21.0",
    "typer>=0.12.0",
    "rich>=13.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
